--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,7 @@
-# These individuals contributed to the hbnb project in this repository
+# These individuals contributed to the hbnb project in this repository, and others i could not name
+
+Ezra Nobrega <ezra.nobrega@outlook.com>
+Justin Majetich <justinmajetich@gmail.com>
+
+it was put together by me
+Liberty Oni
